src/components/blogsSection/BlogsSection.module.css
.container {
  margin-bottom: 30px;
  margin-top: 80px;
}

.blogsContainer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
    "one one two three"
    "one one two three"
    "one one four four"
    "one one seven eight"
    "five six seven eight"
    "five six seven eight";
  width: 100%;
  height: 900px;
  margin-top: 20px;
}

.one {
  grid-area: one;
}

.two {
  grid-area: two;
}

.three {
  grid-area: three;
}

.four {
  grid-area: four;
}

.five {
  grid-area: five;
}

.six {
  grid-area: six;
}

.seven {
  grid-area: seven;
}

.eight {
  grid-area: eight;
}

.three,
.five,
.seven {
  background-color: var(--white);
}

.one,
.two,
.three,
.four,
.five,
.six,
.seven,
.eight {
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.one:hover,
.two:hover,
.three:hover,
.four:hover,
.five:hover,
.six:hover,
.seven:hover,
.eight:hover {
  transform: scale(1.05);
  cursor: pointer;
  transition: all 0.5s;
  border-radius: 10px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

.seven:hover .btn {
  border-radius: 10px;
}

.two:hover + .three,
.seven:hover + .eight {
  transform: scale(1.05);
  cursor: pointer;
  transition: all 0.5s;
  border-radius: 10px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

.three:hover + .two,
.eight:hover + .seven {
  transform: scale(1.05);
  cursor: pointer;
  transition: all 0.5s;
  border-radius: 10px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

.contentDiv {
  /* width: fit-content; */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  /* align-items: flex-end; */
  background: rgba(255, 255, 255, 0.3);
  box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
  font-family: "Open Sans", sans-serif;
  padding: 5px 20px 30px 20px;
}

.contentDiv p {
  font-size: 13px;
  font-weight: 600;
  margin-bottom: 5px;
}

.contentDiv h5 {
  font-size: 20px;
  font-weight: 300;
  margin: 0;
}

.btn {
  width: 100%;
  padding: 20px;
  text-align: left;
  background-color: var(--orange);
  color: var(--white);
  border: none;
  font-family: "Open Sans", sans-serif;
  font-size: 15px;
  font-weight: 500;
  cursor: pointer;
}

.btn:hover {
  background-color: var(--orange4);
}

@media only screen and (max-width: 900px) {
  .container {
    margin-top: -20px;
  }

  .blogsContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 500px;
  }

  .one,
  .two,
  .four,
  .five,
  .six {
    height: 100%;
    width: auto;
  }

  .two,
  .three,
  .five,
  .six {
    display: none;
  }

  .eight {
    display: none;
  }

  .contentDiv {
    padding: 20px;
    background: rgba(255, 255, 255, 0.1);
    box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
  }

  .contentDiv p {
    font-size: 13px;
  }

  .contentDiv h5 {
    font-size: 15px;
  }

  .btn {
    text-align: center;
  }
}

